--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,16 +5,19 @@ description = "Another EC2 metadata service mock"
 authors = ["Your Name <you@example.com>"]
 license = "MIT"
 
+
+[tool.poetry.scripts]
+server = "ec2_metamock.app:run"
+
 [tool.poetry.dependencies]
 python = "^3.6"
 CherryPy = "^18.6.0"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.8.3"
+pytest = "^5.4.3"
 
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
 
-[tool.poetry.scripts]
-server = "ec2_metamock.app:run"
