--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,12 @@ server = "ec2_metamock.app:run"
 [tool.poetry.dependencies]
 python = "^3.6"
 CherryPy = "^18.6.0"
+bottle = "^0.12.18"
 
 [tool.poetry.dev-dependencies]
 flake8 = "^3.8.3"
 pytest = "^5.4.3"
+webTest = "^2.0.35"
 
 [build-system]
 requires = ["poetry>=0.12"]
