--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,12 +12,29 @@ server = "ec2_metamock.app:run"
 [tool.poetry.dependencies]
 python = "^3.6"
 bottle = "^0.12.18"
+black = "^19.10b0"
 
 [tool.poetry.dev-dependencies]
-flake8 = "^3.8.3"
 pytest = "^5.4.3"
 webTest = "^2.0.35"
 
 [build-system]
 requires = ["poetry>=0.12"]
 build-backend = "poetry.masonry.api"
+
+[tool.black]
+line-length = 79
+include = '\.pyi?$'
+exclude = '''
+/(
+    \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | _build
+  | buck-out
+  | build
+  | dist
+)/
+'''
