--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,20 +7,17 @@ license = "MIT"
 
 
 [tool.poetry.scripts]
-server = "ec2_metamock.app:run"
+ec2_metamock = "ec2_metamock.app:run"
 
 [tool.poetry.dependencies]
 python = "^3.6"
 bottle = "^0.12.18"
-black = "^19.10b0"
+click = "^7.1.2"
 
 [tool.poetry.dev-dependencies]
+black = "^19.10b0"
 pytest = "^5.4.3"
 webTest = "^2.0.35"
-
-[build-system]
-requires = ["poetry>=0.12"]
-build-backend = "poetry.masonry.api"
 
 [tool.black]
 line-length = 79
@@ -38,3 +35,6 @@ exclude = '''
   | dist
 )/
 '''
+[build-system]
+requires = ["poetry>=0.12"]
+build-backend = "poetry.masonry.api"
