--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,7 +2,6 @@ name: Tests
 
 on:
   push:
-  pull_request:
 
 jobs:
   tox:
@@ -19,7 +18,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install poetry>=0.12
+        pip install poetry>=0.12 tox
     - name: Tox
       run: |
         tox
