--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,7 +18,8 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install poetry>=0.12 tox
+        pip install poetry>=0.12
     - name: Tox
       run: |
-        tox
+        poetry install -v
+        poetry run pytest tests/
