--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -18,8 +18,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install poetry>=0.12
-    - name: Tox
-      run: |
+        pip install poetry>=0.12 tox
         poetry install -v
+    - name: Poetry main tests
+      run: |
+        poetry run pytest tests/
+    - name: Poetry main tests
+      run: |
         poetry run pytest tests/
